--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"svelte": "^4.2.7",
+		"svelte-preprocess-import-assets": "^1.1.0",
 		"vite": "^5.0.3"
 	},
 	"type": "module"
